Add html and css content

--- a/index.html
+++ b/index.html
@@ -15,54 +15,31 @@
 </head>
 <body>
     <section id="container">
-        <div class="title">
+      
         <h1>QUIZZIA</h1>
-        </div>
  <!--Press to Start  -->
 <div id="startGame">
 <h3 id="pressKey">PRESS ANY KEY TO START</h3>
+<h3 id="countdown"></h3>
 </div>
 <!-- for QUESTION -->
 
 <div class="question-list">
-<form action="", id="question-list">
-    <div id="question-1">
-    <p>Who are You?</p>
-    <input type="text" id="yourChoice">
-</div>
-    <div id="question-2">
-    <p>Who are You?</p>
-  <button>Answer 1</button>
-  <button>Answer 2</button>
-  <button>Answer 3</button>
-  <button>Answer 4</button>
-</div>
-    <div id="question-3">
-    <p>Who are You?</p>
-  <button>Answer 1</button>
-  <button>Answer 2</button>
-  <button>Answer 3</button>
-  <button>Answer 4</button>
-</div>
-
-
-
-
-</form>
-
-
-
-
+<div class="row">
+<div type="button" id="green" class="btn">Answer 1</div>
 
 </div>
 
+</div>
+
+<div class="functions">
 <div id="highScore">High Score</div>
 <div id="nextQuestion">Next</div>
 <div id="restart">Restart</div>
+</div>
 
 
-
-
+</div>
 
 </section>
 
@@ -74,5 +51,6 @@
 
 
 <script src="script.js"></script>
+
 </body>
 </html>
