--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
 
 </div>
 
-</section>
+<audio src="sound/correct.mp3" id="correct-sound">
+</audio>
+<audio src="sound/wrong.mp3" id="wrong-sound">
+</audio>
 
+
+</section>
 
 
 
