add questions and answers

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h1 class="title">QUIZZIA</h1>
  <!--Press to Start  -->
 <div id="startGame">
-<h3 id="pressKey">PRESS ANY KEY TO START</h3>
-<h3 id="countdown"></h3>
+<h3 id="pressKey"  value="0" max="3" value="0" max="3" class="hide">PRESS ANY KEY TO START</h3>
+
 </div>
 <!-- for QUESTION -->
 
@@ -33,7 +33,7 @@
 </div>
 
 <div class="row">
-<div type="button" id="answer-3" class="btn">Answer 3</div>
+<div type="button" id="answer-3" class="btn" class="btn-answer">Answer 3</div>
 <div type="button" id="answer-4" class="btn">Answer 4</div>
 </div>
 
@@ -42,8 +42,8 @@
 <div class="functions">
 
 <div id="nextQuestion" class="btn-1">Next</div>
-<div id="highScore" class="btn-1">High Score
-    <p id="highScoreValue" class="btn-1"></p>
+<div id="highScore" class="btn-1" value="0" max="100">High Score
+    
 </div>
 <div id="restart" class="btn-1">Restart</div>
 </div>
