add style, fonts

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 </div>
 
-<audio src="sound/correct.mp3" id="correct-sound">
+<audio src="./sound/correct.mp3" id="correct-sound">
 </audio>
-<audio src="sound/wrong.mp3" id="wrong-sound">
+<audio src="./sound/wrong.mp3" id="wrong-sound">
 </audio>
 
 
