add java to show qustions

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <h1 class="title">QUIZZIA</h1>
  <!--Press to Start  -->
 <div id="startGame">
-<h3 id="pressKey"  value="0" max="3" value="0" max="3" class="hide">PRESS ANY KEY TO START</h3>
+<h3 id="pressKey"  value="0" max="3" value="0" max="3">PRESS ANY KEY TO START</h3>
 
 </div>
 <!-- for QUESTION -->
 
-<div class="question-list">
-    <div id="question"><h3>This is a question</h3></div>
+<div id="question-list" class="hide">
+    <div id="question"></div>
 <div class="row">
 <div type="button" id="answer-1" class="btn">Answer 1</div>
 <div type="button" id="answer-2" class="btn">Answer 2</div>
