--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <div id="question-list" class="hide">
     <div id="question"></div>
+    <div id="btn-answer">
 <div class="row">
 <div type="button" id="answer-1" class="btn">Answer 1</div>
 <div type="button" id="answer-2" class="btn">Answer 2</div>
@@ -36,7 +37,7 @@
 <div type="button" id="answer-3" class="btn" class="btn-answer">Answer 3</div>
 <div type="button" id="answer-4" class="btn">Answer 4</div>
 </div>
-
+</div>
 </div>
 
 <div class="functions">
