add instruction page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
  <!--Press to Start  -->
 <div id="startGame">
 <h3 id="pressKey"  value="0" max="3" value="0" max="3">PRESS ANY KEY TO START</h3>
-
+<br>
+<br>
+<p id="instruction" class="hide2" style="line-height: 2em;">Answer all questions in 100 seconds. Time will be counting down and everytime you make a wrong choice, your time will be decreased by 10 seconds. The remaining time will be your score. Goodluck and Enjoy!</p>
 </div>
 <!-- for QUESTION -->
 
