--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <br>
 <br>
 <p id="instruction" class="hide2" style="line-height: 2em;">Answer all questions in 100 seconds. Time will be counting down and everytime you make a wrong choice, your time will be decreased by 10 seconds. The remaining time will be your score. Goodluck and Enjoy!</p>
+<p id="yourScore" class="hide2">Your score is:</p>
 </div>
 <!-- for QUESTION -->
 
