--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="functions">
 
 <div id="nextQuestion" class="btn-1">Next</div>
-<div id="highScore" class="btn-1" value="0" max="100">High Score
+<div id="highScore" class="btn-1" value="0" max="100">Level
 </div>
 <div id="reset" class="btn-1">Restart</div>
 </div>
