--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <br>
 <br>
 <p id="instruction" class="hide2" style="line-height: 2em;">Answer all questions in 100 seconds. Time will be counting down and everytime you make a wrong choice, your time will be decreased by 10 seconds. The remaining time will be your score. Goodluck and Enjoy!</p>
-
+<div id="form" class="hide3">
+<label for="form">Player Name:</label><input type="text" class="box"><span><button id="btnForm">BESTSCORE</button></span>
+</div>
 </div>
 <!-- for QUESTION -->
 
