add bestscore and trying to find a way to save it

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
  <!--Press to Start  -->
 <div id="startGame">
     <p id="yourScore"  value="0" max="100"></p>
+    <p id="bestScore"  value="0" max="100"></p>
 <h3 id="pressKey"  value="0" max="3" value="0" max="3" class="hide2">PRESS ANY KEY TO START</h3>
 <br>
 <br>
 <p id="instruction" class="hide2" style="line-height: 2em;">Answer all questions in 100 seconds. Time will be counting down and everytime you make a wrong choice, your time will be decreased by 10 seconds. The remaining time will be your score. Goodluck and Enjoy!</p>
-<div id="form" class="hide3">
+<!-- <div id="form" class="hide3">
 <label for="form">Player Name:</label><input type="text" class="box"><span><button id="btnForm">BESTSCORE</button></span>
-</div>
+</div> -->
 </div>
 <!-- for QUESTION -->
 
@@ -46,7 +47,7 @@
 <div id="nextQuestion" class="btn-1">Next</div>
 <div id="highScore" class="btn-1" value="0" max="100">Level
 </div>
-<div id="reset" class="btn-1">Restart</div>
+<div id="restartBtn" class="btn-1">Restart</div>
 </div>
 
 
