--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <!--Press to Start  -->
 <div id="startGame">
     <p id="yourScore"  value="0" max="100"></p>
-    <p id="bestScore"  value="0" max="100"></p>
+    <p id="bestScore"  value="0" max="100" class="hide2"></p>
 <h3 id="pressKey"  value="0" max="3" value="0" max="3" class="hide2">PRESS ANY KEY TO START</h3>
 <br>
 <br>
