--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
 <div id="startGame">
     <p id="yourScore"  value="0" max="100"></p>
     <p id="bestScore"  value="0" max="100" class="hide2"></p>
+    <p id="fullName" value="text" class="hide2"></p>
 <h3 id="pressKey"  value="0" max="3" value="0" max="3" class="hide2">PRESS ANY KEY TO START</h3>
 <br>
 <br>
 <p id="instruction" class="hide2" style="line-height: 2em;">Answer all questions in 100 seconds. Time will be counting down and everytime you make a wrong choice, your time will be decreased by 10 seconds. The remaining time will be your score. Goodluck and Enjoy!</p>
-<!-- <div id="form" class="hide3">
-<label for="form">Player Name:</label><input type="text" class="box"><span><button id="btnForm">BESTSCORE</button></span>
-</div> -->
+<div id="form" class="hide2">
+<label for="form">Player Name:</label>
+<input type="text" name="FullName" placeholder="Who's the Winner?" class="box" id="formName" /><span><button id="btnForm">BESTSCORER</button></span>
+</div>
 </div>
 <!-- for QUESTION -->
 
